--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>WHAT DO WE DO?
+          <h2>WHAT WE DO?
           </h2>
           <p>Innovative Solutions Across the Spectrum: Empowering Businesses with Cutting-Edge Technologies and Actionable Insights.</p>
         </div>
